--- a/Draw/ZhaJinHua/View/ZJHMyAvatarView~ipad.xib
+++ b/Draw/ZhaJinHua/View/ZJHMyAvatarView~ipad.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">12A269</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
-		<string key="IBDocument.AppKitVersion">1187</string>
-		<string key="IBDocument.HIToolboxVersion">624.00</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">1926</string>
@@ -68,7 +68,7 @@
 					<object class="IBUILabel" id="475606837">
 						<reference key="NSNextResponder" ref="772205281"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{114, 0}, {100, 32}}</string>
+						<string key="NSFrame">{{112, 0}, {100, 32}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="983823943"/>
@@ -92,8 +92,8 @@
 							<int key="traits">0</int>
 							<double key="pointSize">16</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="215600086">
-							<string key="NSName">Avenir-Medium</string>
+						<object class="NSFont" key="IBUIFont" id="90387749">
+							<string key="NSName">Helvetica</string>
 							<double key="NSSize">16</double>
 							<int key="NSfFlags">16</int>
 						</object>
@@ -102,7 +102,7 @@
 					<object class="IBUILabel" id="983823943">
 						<reference key="NSNextResponder" ref="772205281"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{114, 38}, {100, 22}}</string>
+						<string key="NSFrame">{{112, 38}, {100, 22}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="534568071"/>
@@ -121,13 +121,13 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<reference key="IBUIFontDescription" ref="959017291"/>
-						<reference key="IBUIFont" ref="215600086"/>
+						<reference key="IBUIFont" ref="90387749"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUIImageView" id="534568071">
 						<reference key="NSNextResponder" ref="772205281"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{110, 74}, {24, 24}}</string>
+						<string key="NSFrame">{{108, 74}, {24, 24}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="662170440"/>
@@ -142,10 +142,9 @@
 					<object class="IBUILabel" id="662170440">
 						<reference key="NSNextResponder" ref="772205281"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{136, 68}, {80, 36}}</string>
+						<string key="NSFrame">{{133, 68}, {82, 36}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="957088809"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -160,9 +159,9 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
+						<float key="IBUIMinimumScaleFactor">0.80000001192092896</float>
 						<reference key="IBUIFontDescription" ref="959017291"/>
-						<reference key="IBUIFont" ref="215600086"/>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+						<reference key="IBUIFont" ref="90387749"/>
 					</object>
 				</array>
 				<string key="NSFrameSize">{222, 114}</string>
@@ -246,10 +245,10 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="534568071"/>
 							<reference ref="475606837"/>
-							<reference ref="983823943"/>
-							<reference ref="662170440"/>
 							<reference ref="389415577"/>
 							<reference ref="620880868"/>
+							<reference ref="662170440"/>
+							<reference ref="983823943"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
